2019-08-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add kgf/cm^2 composite unit and interpret kg/cm^2 as kgf/cm^2 when converting pressure

2019-08-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow replacement of >1 and <n terms or factors in replace(), e.g. replace(x+y+1, x+y, x*y)
	* Allow function replacement in replace(), e.g. replace(sin(x), sin, cos)

2019-08-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* "where"-syntax (e.g. "x+y where x=1 and y=2", or alternatively "x+y/.x=1,y=2", and "x^2=4 where x>0")

2019-08-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Interpet comma as vector/argument separator if decimal separator is comma but numbers contains multiple commas or comma at end, e.g. [5,2,3,x]=[5;2;3;x], and add misplaced decimal separator warning for unhandled cases

2019-08-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix local thousands separator on Windows when localeconv()->thousands_sep is a non-Unicode character > 127 (e.g. non-breaking space, 0xA0)

2019-07-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Man page

2019-07-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add Calculator::setLocalCurrency() (overrides currency specified by LC_MONETARY)

2019-07-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support both micro sign and small mu as symbol for micro prefix
	* Allow translation of prefixes
	* Fix English spelling of "deca"

2019-07-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Treat text after '_' as suffix by default when user creates a new function, unit, or variable
	* Check for duplicate names when loading imported definitions

2019-07-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "to unicode" conversion
	* Display messages generated during initial loading of definitions immediately (instead of after first calculation) in qalc

2019-07-11 Hanna Knutsson <hanna.knutsson@protonmail.com>
