@@ -1,3 +1,12 @@
+2019-10-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fixes for when narrow no-break space is local digit grouping separator
+	* Calculate inverse when division operation is applied to RPN stack with only one value
+
+2019-09-17 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Only read first value (both values were concatenated as one) from /proc/uptime
+
 2019-08-28 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Add kgf/cm^2 composite unit and interpret kg/cm^2 as kgf/cm^2 when converting pressure
